added vizag and some pages

--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Ecombinators — Scalable AI-Powered Applications</title>
-    <meta name="description" content="The Ecombinators build scalable AI-powered applications: full-stack development, GenAI, RAG systems, and AI agents. From MVP to enterprise, delivered faster." />
-    <meta property="og:title" content="The Ecombinators" />
-    <meta property="og:description" content="Full-stack, GenAI, RAG, and AI agent solutions." />
+    <title>Vizax — AI-Powered Solutions & Intelligent Automation</title>
+    <meta name="description" content="Vizax delivers cutting-edge AI solutions: intelligent automation, machine learning systems, GenAI integrations, and custom AI agents. Transform your business with AI-first technology." />
+    <meta property="og:title" content="Vizax — AI-Powered Solutions" />
+    <meta property="og:description" content="Transform your business with cutting-edge AI solutions, intelligent automation, and custom AI agents." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://theecombinators.com" />
+    <meta property="og:url" content="https://vizax.tech" />
     <meta property="og:image" content="/og-image.png" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="The Ecombinators" />
-    <meta name="twitter:description" content="Scalable AI-powered applications." />
+    <meta name="twitter:title" content="Vizax — AI-Powered Solutions" />
+    <meta name="twitter:description" content="Transform your business with cutting-edge AI solutions and intelligent automation." />
     <meta name="twitter:image" content="/og-image.png" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
