--- a/index.html
+++ b/index.html
@@ -2,7 +2,21 @@
 <html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- Favicon - Multiple sizes for maximum quality -->
+    <link rel="icon" type="image/webp" href="/favicon.webp" sizes="any" />
+    <link rel="icon" type="image/webp" href="/favicon.webp" sizes="16x16" />
+    <link rel="icon" type="image/webp" href="/favicon.webp" sizes="32x32" />
+    <link rel="icon" type="image/webp" href="/favicon.webp" sizes="48x48" />
+    <link rel="icon" type="image/webp" href="/favicon.webp" sizes="64x64" />
+    <link rel="icon" type="image/webp" href="/favicon.webp" sizes="128x128" />
+    <link rel="icon" type="image/webp" href="/favicon.webp" sizes="256x256" />
+    <link rel="icon" type="image/webp" href="/favicon.webp" sizes="512x512" />
+    <link rel="icon" type="image/webp" href="/favicon.webp" sizes="1024x1024" />
+    <!-- Apple Touch Icon for iOS devices (maximum size) -->
+    <link rel="apple-touch-icon" href="/favicon.webp" sizes="180x180" />
+    <link rel="apple-touch-icon" href="/favicon.webp" sizes="1024x1024" />
+    <!-- Web App Manifest for PWA support with maximum icon sizes -->
+    <link rel="manifest" href="/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vizax — AI-Powered Solutions & Intelligent Automation</title>
     <meta name="description" content="Vizax delivers cutting-edge AI solutions: intelligent automation, machine learning systems, GenAI integrations, and custom AI agents. Transform your business with AI-first technology." />
