Update SEO and branding: Replace AI solutions content with conference website solutions

--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
     <!-- Web App Manifest for PWA support with maximum icon sizes -->
     <link rel="manifest" href="/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vizax — AI-Powered Solutions & Intelligent Automation</title>
-    <meta name="description" content="Vizax delivers cutting-edge AI solutions: intelligent automation, machine learning systems, GenAI integrations, and custom AI agents. Transform your business with AI-first technology." />
-    <meta property="og:title" content="Vizax — AI-Powered Solutions" />
-    <meta property="og:description" content="Transform your business with cutting-edge AI solutions, intelligent automation, and custom AI agents." />
+    <title>Vizax — Professional Conference Website Solutions</title>
+    <meta name="description" content="Vizax delivers professional conference website solutions with complete A to Z tech support. Custom conference management platforms, registration systems, abstract management, and admin panels for universities and organizations worldwide." />
+    <meta property="og:title" content="Vizax — Professional Conference Website Solutions" />
+    <meta property="og:description" content="Complete conference website solutions with registration systems, abstract management, and powerful admin tools. Trusted by University of Oxford and leading institutions." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://vizax.tech" />
     <meta property="og:image" content="/og-image.png" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Vizax — AI-Powered Solutions" />
-    <meta name="twitter:description" content="Transform your business with cutting-edge AI solutions and intelligent automation." />
+    <meta name="twitter:title" content="Vizax — Professional Conference Website Solutions" />
+    <meta name="twitter:description" content="Complete conference website solutions with registration systems, abstract management, and powerful admin tools for universities and organizations." />
     <meta name="twitter:image" content="/og-image.png" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
